--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,10 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-    <groupId>org.postgresql</groupId>
-    <artifactId>postgresql</artifactId>
-    <scope>runtime</scope>
-</dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
